[Update] Implemented Follow
