# tweeter-web-starter/tweeter-web/src/net/ServerFacade.ts
@@ -1,5 +1,7 @@
 import {
   AuthToken,
+  FollowRequest,
+  FollowResponse,
   GetFolloweeCountRequest,
   GetFolloweeCountResponse,
   GetFollowerCountRequest,
@@ -295,6 +297,21 @@ export class ServerFacade {
     // Handle errors
     if (response.success) {
       return response.numFollowers;
+    } else {
+      console.error(response);
+      throw new Error(response.message ?? undefined);
+    }
+  }
+
+  public async follow(request: FollowRequest): Promise<[number, number]> {
+    const response = await this.clientCommunicator.doPost<
+      FollowRequest,
+      FollowResponse
+    >(request, "/user/follow");
+
+    // Handle errors
+    if (response.success) {
+      return [response.followerCount, response.followeeCount];
     } else {
       console.error(response);
       throw new Error(response.message ?? undefined);
